apps/connectivity/gateway-api/refgrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: from-connectivity-to-owncloud
  namespace: data-storage
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: connectivity
  to:
    - group: ""
      kind: Service
      name: owncloud
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: from-connectivity-to-grafana
  namespace: observability
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: connectivity
  to:
    - group: ""
      kind: Service
      name: kube-prometheus-stack-grafana

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: from-connectivity-to-argocd-server
  namespace: argocd
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: connectivity
  to:
    - group: ""
      kind: Service
      name: argocd-server
