apps/connectivity/gateway-api/tcp-udp-routes.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: pihole-dns-tcp
  namespace: connectivity
spec:
  parentRefs:
    - name: tcp-udp-gateway
      namespace: connectivity
      sectionName: pihole-dns-tcp
  rules:
    - backendRefs:
        - name: pihole-dns-tcp
          port: 53
